[package]
name = "mdns-tunneller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-parser = "0.8.0"
net2 = "0.2"
tokio = { version = "1.18.2", features = ["full"] }
anyhow = "1.0.57"
pnet = "0.30.0"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1.8"
futures = "0.3.21"
clap = { version = "3", features = ["derive"] }
async-channel = "1.6.1"
tracing = "0.1"
tracing-subscriber = "0.2"
